fix fix z-index

--- a/src/navigation/navigation-fullscreen/NavigationFullscreenButton.css
+++ b/src/navigation/navigation-fullscreen/NavigationFullscreenButton.css
@@ -4,7 +4,7 @@
 #navigation-fullscreen-button {
   width: var(--navigation-fullscreen-button-width);
   position: relative;
-  z-index: 10;
+  z-index: 2;
 }
 #navigation-wrapper:hover + #navigation-fullscreen-button > div > div,
 #navigation-fullscreen-button:hover > div > div {
